DevTools: Fix vertical alignment of text and checkboxes in dt-checkbox labels
This got regressed in r187165

R=pfeldman
NOTRY=true

Review URL: https://codereview.chromium.org/805153003

git-svn-id: svn://svn.chromium.org/blink/trunk@187697 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/elements/elementsPanel.css
+++ b/front_end/elements/elementsPanel.css
@@ -759,10 +759,6 @@ label.checkbox-with-label {
     -webkit-user-select: none;
 }
 
-label.checkbox-with-label > .dt-checkbox-text {
-    margin-top: 1px;
-}
-
 .events-pane .section:not(:first-of-type) {
     border-top: 1px solid rgb(231, 231, 231);
 }
