--- a/front_end/ui/checkboxTextLabel.css
+++ b/front_end/ui/checkboxTextLabel.css
@@ -9,12 +9,12 @@
     margin: 0;
     display: inline-flex;
     flex-shrink: 0;
-    align-items: flex-start;
+    align-items: flex-start !important;
 }
 
 ::content > .dt-checkbox-button {
     height: 12px;
     width: 12px;
-    margin: 2px 3px 2px 2px;
+    margin: 1px 3px 2px 2px;
     flex-shrink: 0;
 }
